--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -28,6 +28,7 @@
   position: relative;
   /* Altura mínima para asegurar consistencia */
   min-height: 280px;
+  border-left: 6px solid #e61b15;
 }
 
 .offer-card:hover {
@@ -46,6 +47,7 @@ mat-card-title {
   word-wrap: break-word;
   word-break: break-word;
   max-width: 100%;
+  /* border-bottom: solid #666; */
 }
 
 mat-card-subtitle {
@@ -142,7 +144,8 @@ mat-card-subtitle {
 }
 
 /* === ICONOS DE LOS BOTONES === */
-#info, #apply  {
+#info,
+#apply {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -168,7 +171,7 @@ mat-card-subtitle {
 }
 
 /* Para URLs y correos electrónicos */
-.offer-card a, 
+.offer-card a,
 .offer-card span,
 .offer-card p,
 .offer-card h1,
